syntax = "proto3";

option csharp_namespace = "MicroStore.Bff.Shopping.Grpc.Catalog";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package CatalogApi;

service CategoryService{
	rpc Create(CreateCategoryRequest) returns(CategoryResponse);
	rpc Update(UpdateCategoryRequest) returns(CategoryResponse);
	rpc GetList(CategoryListRequest) returns(ListCategoryResponse);
	rpc GetById(GetCategoryByIdRequest) returns (CategoryResponse);
}

message CreateCategoryRequest{
	string name = 1;
	google.protobuf.StringValue description = 2;
}

message UpdateCategoryRequest{
	string id = 1;
    string name = 2;
	google.protobuf.StringValue description = 3;
}

message CategoryListRequest{
	google.protobuf.StringValue name= 1;
	google.protobuf.StringValue sortBy = 2;
	bool desc= 3;
}

message GetCategoryByIdRequest{
	string id = 1;
}

message CategoryResponse
{
	string id = 1;
	string name = 2;
	optional string description = 3;
	optional google.protobuf.Timestamp createdAt = 4;
    optional google.protobuf.Timestamp modifiedAt= 5;
}

message CategoryPagedResponse
{
	repeated  CategoryResponse items =1;
	int32 skip =  2;
	int32 length = 3;
	int32 totalCount = 4;
}

message ListCategoryResponse{
	repeated CategoryResponse data =1;
}





